--- a/AoC2020ConsoleApp/AoC2020ConsoleApp.csproj
+++ b/AoC2020ConsoleApp/AoC2020ConsoleApp.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AoC2020ClassLibrary\AoC2020ClassLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
