--- a/AoC2020NUnitTests/AoC2020NUnitTests.csproj
+++ b/AoC2020NUnitTests/AoC2020NUnitTests.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AoC2020ClassLibrary\AoC2020ClassLibrary.csproj" />
     <ProjectReference Include="..\AoC2020ConsoleApp\AoC2020ConsoleApp.csproj" />
   </ItemGroup>
 
