--- a/AoC2020NUnitTests/AoC2020NUnitTests.csproj
+++ b/AoC2020NUnitTests/AoC2020NUnitTests.csproj
@@ -26,6 +26,9 @@
     <None Update="Resources\Input\Day1-Part1.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\Input\Day2-Part1.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Resources\TextFile.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
