--- a/AoC2020NUnitTests/AoC2020NUnitTests.csproj
+++ b/AoC2020NUnitTests/AoC2020NUnitTests.csproj
@@ -38,6 +38,9 @@
     <None Update="Resources\Input\Day4-Part2.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\Input\Day5-Part1.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Resources\TextFile.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
