--- a/AoC2020NUnitTests/AoC2020NUnitTests.csproj
+++ b/AoC2020NUnitTests/AoC2020NUnitTests.csproj
@@ -50,6 +50,9 @@
     <None Update="Resources\Input\Day7-Part2.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\Input\Day8-Part1.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Resources\TextFile.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
