--- a/AoC2020NUnitTests/AoC2020NUnitTests.csproj
+++ b/AoC2020NUnitTests/AoC2020NUnitTests.csproj
@@ -38,6 +38,9 @@
     <None Update="Resources\Input\Day12-Part1.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\Input\Day13-Part1.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Resources\Input\Day2-Part1.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
